tests/lean/2040.lean.expected.out
2040.lean:8:8-8:13: error: failed to synthesize instance
  HPow Nat Nat Int
2040.lean:14:8-14:13: error: failed to synthesize instance
  HPow Nat Nat Int
2040.lean:20:8-20:13: error: failed to synthesize instance
  HPow Nat Nat Int
2040.lean:18:2-20:22: error: type mismatch
  trans (sorryAx (a = 37)) (sorryAx (37 = 2 ^ n))
has type
  a = @OfNat.ofNat Nat 2 (instOfNatNat 2) ^ n : Prop
but is expected to have type
  a = @OfNat.ofNat Int 2 instOfNatInt ^ n : Prop
